--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="#">
+                    <a href="index.html">
                         <img src="assets/images/runtzcoin-300x144.png" alt="Runtzcoin logo" style="height: 5.5rem;">
                     </a>
                 </span>
@@ -68,7 +68,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features3-3">Ecosystem</a>
                     </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#team1-4">Team</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="Whitepaper.html">Whitepaper</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="contact-us.html">Contact Us<br></a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page3.html">Diamond Hands</a></li></ul>
                 <div class="icons-menu">
                     <a href="https://twitter.com/runtzcoin" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-twitter socicon"></span>
