--- a/contact-us.html
+++ b/contact-us.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Contact Us</title>
+  <title>Contact Us - RuntzCoin</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -66,7 +66,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features3-3">Ecosystem</a>
-                    </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#team1-4">Team</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="Whitepaper.html">Whitepaper</a></li>
+                    </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#team1-4">Team</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="Whitepaper.html">Rollingpapers</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page3.html">Diamond Hands</a></li></ul>
                 <div class="icons-menu">
                     <a href="https://twitter.com/runtzcoin" target="_blank">
@@ -82,7 +82,7 @@
                     
                     
                 </div>
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success-outline display-4" href="/"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SWAP COMING!</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success-outline display-4" href="index.html#features1-b"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>RUNTZSWAP</a></div>
             </div>
         </div>
     </nav>
@@ -109,7 +109,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="XJMjzVzcuiuR+Iw9nSsakrdq1uPHFLBrPV7taQPDvwdx2aioBd6GYzLpPiildt0PodOHPtVPQ7kxQqe6A8Tql90bOB7REfKpSFKYcZ+DWEate9stEbU1umQW9H9mLaiA.4X/tPLkHY32FzVSEk4xeKjHDqnoXgkONaPMNuD/ECdB1bzbw0/Wd4Ihle2HWqx6vxjcV9neoNP1JNACf8tLaygmsKqzZo5tAKEU7doCoIXT8Aid/E7ASXUNgNoQMFfRS">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="JWkMtPuiL4LTrUDt2uizjhDPrfl/hckyC9MF0rekPMpAz+GIM/V9mqxhe3QHUWA+mHTWPABVA85sQa+hPUHppHR4U6HytT8R8txpRHiaNxWLHzHQiGRu/nUcm/oShltp.g27socGaQ7+QTC6pANCWJftT6lzh/n95eZ45KxYDSzA7Pvm+/BAzz5XTiksrpDOTwJtWmgS+ihchv9hzT+rCrUdlevTTQ1hJI/QPTrbFsHM0rCVAxn5IJK+GOV9Wi118">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -153,7 +153,7 @@
     <div class="container">
         <div class="row align-left">
             <div class="col-md-6 col-lg-3">
-                <h3 class="title pb-2 align-left mbr-bold mbr-fonts-style display-2"><a href="index.html" class="text-primary">RuntzCoin</a></h3>
+                <h3 class="title pb-2 align-left mbr-bold mbr-fonts-style display-2"><a href="index.html" class="text-primary">RuntzCoin</a>™</h3>
                 <p class="mbr-text align-left mbr-white mbr-regular mbr-fonts-style display-7">All Rights Reserved</p>
                 <div class="socicon-wrap">
                     <a href="https://twitter.com/runtzcoin" target="_blank"><span class="mbr-iconfont socicon-twitter socicon"></span></a>
