--- a/diamondholders.html
+++ b/diamondholders.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Diamond Hands</title>
+  <title>Diamond Hands - RuntzCoin</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -66,7 +66,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features3-3">Ecosystem</a>
-                    </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#team1-4">Team</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="Whitepaper.html">Whitepaper</a></li>
+                    </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#team1-4">Team</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="Whitepaper.html">Rollingpapers</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page3.html">Diamond Hands</a></li></ul>
                 <div class="icons-menu">
                     <a href="https://twitter.com/runtzcoin" target="_blank">
@@ -82,7 +82,7 @@
                     
                     
                 </div>
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success-outline display-4" href="/"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SWAP COMING!</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success-outline display-4" href="index.html#features1-b"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>RUNTZSWAP</a></div>
             </div>
         </div>
     </nav>
@@ -171,7 +171,7 @@
     <div class="container">
         <div class="row align-left">
             <div class="col-md-6 col-lg-3">
-                <h3 class="title pb-2 align-left mbr-bold mbr-fonts-style display-2"><a href="index.html" class="text-primary">RuntzCoin</a></h3>
+                <h3 class="title pb-2 align-left mbr-bold mbr-fonts-style display-2"><a href="index.html" class="text-primary">RuntzCoin</a>™</h3>
                 <p class="mbr-text align-left mbr-white mbr-regular mbr-fonts-style display-7">All Rights Reserved</p>
                 <div class="socicon-wrap">
                     <a href="https://twitter.com/runtzcoin" target="_blank"><span class="mbr-iconfont socicon-twitter socicon"></span></a>
